<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Mode_Entry">




    <EditText
        android:id="@+id/textModeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
       android:hint="@string/mode_name"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/imageMicButton"
        android:layout_width="89dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onModeButtonsClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/ic_mic" />

    <ImageButton
        android:id="@+id/imageTemplateButtonx"
        android:layout_width="89dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onModeButtonsClick"
        app:layout_constraintEnd_toStartOf="@+id/imageMicButton"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/ic_template" />







    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textModeName">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
      android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/write_message"

            android:id="@+id/textModeMessage"
            android:inputType="textMultiLine"
            android:textSize="17sp" />


    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/set_intervals"

        android:textAlignment="textStart"
        android:textColor="@color/Blue"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageTemplateButtonx"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTemplateButtonx" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioIDeactivate"
            android:checked="true"
            android:onClick="onRadioModeClick"
            android:layout_margin="4dp"

            android:text="@string/Manual" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioDateTime"
            android:onClick="onRadioModeClick"
            android:layout_margin="4dp"
            android:text="@string/by_date_and_time" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioByWeek"
            android:onClick="onRadioModeClick"
            android:layout_margin="4dp"
            android:text="@string/weekly" />


    </RadioGroup>

    <Button
        android:id="@+id/buttonFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:onClick="onModeButtonsClick"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/buttonTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:text="Button"
        android:onClick="onModeButtonsClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="@id/buttonTo"
        app:layout_constraintLeft_toRightOf="@id/buttonFrom"

        android:text="@string/To"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        tools:layout_editor_absoluteX="188dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/reply_to"
        app:layout_constraintTop_toBottomOf="@id/buttonFrom"
        android:layout_marginTop="15dp"
        android:textAlignment="textStart"
        android:textColor="@color/Blue"

        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        tools:layout_editor_absoluteY="441dp" />

    <RadioGroup

        android:id="@+id/radioGroup3"
        android:layout_width="0dp"


        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/textSelectedContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/replyAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_margin="4dp"
            android:onClick="onRadioModeClick"

            android:text="@string/all_contacts" />

        <RadioButton
            android:id="@+id/replyExcept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioModeClick"
            android:layout_margin="4dp"
            android:text="@string/all_contacts_except_these" />


    </RadioGroup>

    <Button
        android:id="@+id/textSelectedContacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:textSize="23sp"
        android:onClick="onModeButtonsClick"
        android:text="@string/selectedContacts"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
        app:layout_constraintVertical_bias="0.029" />


</android.support.constraint.ConstraintLayout>

    </LinearLayout>
    </ScrollView>
